# backend/internal/routes/routes.go
@@ -8,7 +8,7 @@ import (
 func SetupRoutes(app *fiber.App) {
 	app.Get("/health", handlers.HealthCheck)
 
-	app.Get("/guestlogin", handlers.GuestRegister)
+	app.Post("/guestregister", handlers.GuestRegister)
 	app.Post("/products", handlers.AddProduct)
 	app.Get("/products", handlers.GetProducts)
 	app.Post("/campaigns", handlers.AddCampaign)
